Added last winner info to the player view + game state
